--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -703,37 +703,42 @@ body {
 }
 
 /* line 16, ../sass/partials/_base.scss */
-header, #TOC {
+img, header, #TOC {
   width: 100%;
 }
 
 /* line 19, ../sass/partials/_base.scss */
+code, kbd, pre, samp, a {
+  word-break: break-word;
+}
+
+/* line 22, ../sass/partials/_base.scss */
 header {
   background-color: #c0beeb;
   text-align: center;
 }
 
-/* line 23, ../sass/partials/_base.scss */
+/* line 26, ../sass/partials/_base.scss */
 header, section.level1, #TOC, #TOC > ul {
   margin: 0 auto;
-  padding: 20px;
+  padding: 20px 0;
 }
 
-/* line 27, ../sass/partials/_base.scss */
+/* line 30, ../sass/partials/_base.scss */
 #TOC {
   margin: 0 auto;
 }
-/* line 29, ../sass/partials/_base.scss */
+/* line 32, ../sass/partials/_base.scss */
 #TOC > ul {
   border: 1px dotted #dddddd;
 }
-/* line 32, ../sass/partials/_base.scss */
+/* line 35, ../sass/partials/_base.scss */
 #TOC ul {
   margin-top: .5em;
   margin-bottom: .5em;
 }
 
-/* line 38, ../sass/partials/_base.scss */
+/* line 41, ../sass/partials/_base.scss */
 .level1 h1 {
   font-size: 2em;
   line-height: .875em;
@@ -751,7 +756,7 @@ header, section.level1, #TOC, #TOC > ul {
   padding: 0.5em 1em;
   margin: 1em auto 1.5em;
 }
-/* line 49, ../sass/partials/_base.scss */
+/* line 52, ../sass/partials/_base.scss */
 .level1 h1:before, .level1 h1:after {
   content: "";
   position: absolute;
@@ -760,24 +765,24 @@ header, section.level1, #TOC, #TOC > ul {
   border: 0.875em solid #5ea52c;
   z-index: -1;
 }
-/* line 57, ../sass/partials/_base.scss */
+/* line 60, ../sass/partials/_base.scss */
 .level1 h1:before {
   left: -1em;
   border-right-width: .75em;
   border-left-color: transparent;
 }
-/* line 62, ../sass/partials/_base.scss */
+/* line 65, ../sass/partials/_base.scss */
 .level1 h1:after {
   right: -1em;
   border-left-width: .75em;
   border-right-color: transparent;
 }
-/* line 67, ../sass/partials/_base.scss */
+/* line 70, ../sass/partials/_base.scss */
 .level1 h1 a {
   color: white;
   text-shadow: rgba(111, 111, 111, 0.5) 1px 2px 4px;
 }
-/* line 70, ../sass/partials/_base.scss */
+/* line 73, ../sass/partials/_base.scss */
 .level1 h1 a:before, .level1 h1 a:after {
   content: "";
   position: absolute;
@@ -786,23 +791,23 @@ header, section.level1, #TOC, #TOC > ul {
   border-color: #4c8523 transparent transparent transparent;
   bottom: -.5em;
 }
-/* line 78, ../sass/partials/_base.scss */
+/* line 81, ../sass/partials/_base.scss */
 .level1 h1 a:before {
   left: 0;
   border-width: 0.5em 0 0 0.6em;
 }
-/* line 82, ../sass/partials/_base.scss */
+/* line 85, ../sass/partials/_base.scss */
 .level1 h1 a:after {
   right: 0;
   border-width: 0.5em 0.6em 0 0;
 }
 
-/* line 89, ../sass/partials/_base.scss */
+/* line 92, ../sass/partials/_base.scss */
 #menu {
   background-color: #d2d0eb;
   text-align: center;
 }
-/* line 93, ../sass/partials/_base.scss */
+/* line 96, ../sass/partials/_base.scss */
 #menu a {
   color: #4c8523;
   display: inline-block;
@@ -810,13 +815,13 @@ header, section.level1, #TOC, #TOC > ul {
   text-shadow: 0 1px 0 #dddddd;
   text-decoration: none;
 }
-/* line 95, ../sass/partials/_base.scss */
+/* line 98, ../sass/partials/_base.scss */
 #menu a:hover {
   background-color: #e6e5f8;
 }
 
 @media screen and (min-width: 601px) {
-  /* line 105, ../sass/partials/_base.scss */
+  /* line 108, ../sass/partials/_base.scss */
   #menu {
     position: absolute;
     top: -5px;
@@ -837,71 +842,71 @@ header, section.level1, #TOC, #TOC > ul {
     -moz-box-shadow: #6f6f6f 0px 1px 7px;
     box-shadow: #6f6f6f 0px 1px 7px;
   }
-  /* line 114, ../sass/partials/_base.scss */
+  /* line 117, ../sass/partials/_base.scss */
   #menu a {
     display: block;
     padding: 0.4em 0;
     color: #97a68d;
     background-color: #d7f7c0;
   }
-  /* line 118, ../sass/partials/_base.scss */
+  /* line 121, ../sass/partials/_base.scss */
   #menu a:first-child {
     border-bottom: 1px dotted #dddddd;
   }
-  /* line 121, ../sass/partials/_base.scss */
+  /* line 124, ../sass/partials/_base.scss */
   #menu a:hover {
     background-color: #e6fcd7;
   }
 }
 /* Tablets and Desktops */
 @media only screen and (min-width: 1024px) {
-  /* line 130, ../sass/partials/_base.scss */
+  /* line 133, ../sass/partials/_base.scss */
   section.level1, #TOC > ul {
     width: 75%;
   }
 }
 /* tablet */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
-  /* line 136, ../sass/partials/_base.scss */
+  /* line 139, ../sass/partials/_base.scss */
   section.level1, #TOC > ul {
     width: 65%;
     font-size: 0.938em;
   }
 
-  /* line 140, ../sass/partials/_base.scss */
+  /* line 143, ../sass/partials/_base.scss */
   .tagline {
     font-size: 3em;
   }
 
-  /* line 143, ../sass/partials/_base.scss */
+  /* line 146, ../sass/partials/_base.scss */
   .sub-tagline {
     font-size: 1.35em;
   }
 
-  /* line 147, ../sass/partials/_base.scss */
+  /* line 150, ../sass/partials/_base.scss */
   #menu a {
     padding: 0.3em 0;
   }
 }
 /* phones */
 @media only screen and (max-width: 767px) {
-  /* line 155, ../sass/partials/_base.scss */
+  /* line 158, ../sass/partials/_base.scss */
   section.level1, #TOC > ul {
     width: 60%;
     font-size: 0.875em;
   }
 
-  /* line 159, ../sass/partials/_base.scss */
+  /* line 162, ../sass/partials/_base.scss */
   .tagline {
     font-size: 2.25em;
   }
 
-  /* line 162, ../sass/partials/_base.scss */
+  /* line 165, ../sass/partials/_base.scss */
   .sub-tagline {
     font-size: 1em;
   }
 
-  /* line 166, ../sass/partials/_base.scss */
+  /* line 169, ../sass/partials/_base.scss */
   #menu a {
     padding: 0.2em 0.3em;
   }
